# brandocs-databank

./: Pasted-2024-11-17-14-53-53-884-Error-running-WSGI-application-2024-11-17-14-53-53-887-ModuleNotFoundError-1731855328524.txt  Pasted-Connected-successfully-selecting-inbox-Found-42-messages-Processing-latest-email-ID-b-42-Ema-1731783993595.txt  app.db  app.json  app.py  email_utils.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  set_heroku_config.sh
instance/: brandocs.db
models/: models.py
static/css/: style.css
static/js/: companies.js  main.js
templates/: companies.html  index.html
var/www/: brandocs_pythonanywhere_com_wsgi.py
