[project]
name = "repl-nix-minimalemailmonitor-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.2.0",
    "flask==2.0.1",
    "flask-sqlalchemy==2.5.1",
    "pypdf2==2.10.5",
    "sqlalchemy==1.4.23",
    "pymysql==1.0.2",
    "werkzeug==2.0.3",
    "cryptography==37.0.4",
    "python-dotenv==0.19.0",
    "flask-login==0.5.0",
    "flask-migrate==3.1.0",
    "pytz==2024.1",
    "psycopg2-binary>=2.9.9",
    "gunicorn==21.2.0",
    "backports.zoneinfo;python_version<'3.9'"
]
